fix(Movie): wrap providers

--- a/src/styles/Movie.css
+++ b/src/styles/Movie.css
@@ -158,6 +158,7 @@
 }
 .providers {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   gap: 1rem;
 }
